--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -31,7 +31,7 @@
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'spartan_bold';
+    font-family: 'montserrat_bold';
     letter-spacing: 3px;
     text-transform: uppercase;
     margin-bottom: 0px;
