--- a/assets/scss/common/styling.scss
+++ b/assets/scss/common/styling.scss
@@ -5,3 +5,9 @@
 .hidden {
     display: none;
 }
+
+.white-line-break {
+    height: 8px;
+    width: 150px;
+    border-bottom: thin solid white;
+}
