--- a/assets/scss/frontend-style.scss
+++ b/assets/scss/frontend-style.scss
@@ -8,6 +8,8 @@
 @import 'assets/scss/common/images';
 @import 'assets/scss/common/forms';
 
+@import 'assets/scss/blocks/start';
+
 @import 'assets/scss/elements/containers';
 @import 'assets/scss/elements/buttons';
 @import 'assets/scss/elements/carbon-blocks';
