--- a/assets/scss/common/_header.scss
+++ b/assets/scss/common/_header.scss
@@ -1,6 +1,6 @@
-header {
+header#desktop-header {
     @include flex-start-column;
-    position: sticky;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 240px;
@@ -23,39 +23,72 @@ header {
         margin-top: 0px;
     }
 
-    .mobile-menu {
+    @media ( max-width: 1000px ) {
         display: none;
     }
 
-    @media ( max-width: 1000px ) {
+}
+
+header#mobile-header {
+    @include flex-center-column;
+    position: relative;
+    width: 100%;
+    padding-top: 20px;
+    grid-gap: 20px;
+    background-color: $white;
+    color: $grey-3;
+    box-sizing: border-box;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+    a:hover {
+        color: black;
+    }
+
+
+    div.top {
         @include flex-space-between;
-        width: 100vw;
-        height: 100px;
-        padding-top: 0px;
+        width: 100%;
+        align-items: center;
+        box-sizing: border-box;
         padding-left: 30px;
         padding-right: 30px;
-        flex-direction: row;
-        align-items: center;
-
-        .mobile-menu {
-            @include flex-center-center;
-            column-gap: 40px;
-
-            .hamburger {
-                @include flex-center-center;
-                border: 2px solid black;
-                width: 40px;
-                height: 40px;
-                cursor: pointer;
-                color: black;
-            }
-
-        }
 
         h1 {
             margin-bottom: 0px;
             margin-top: 0px;
         }
+
+        div {
+            @include flex-center-center;
+            column-gap: 50px;
+        }
+
+    }
+
+    div.bottom {
+        width: 100%;
+        scroll-behavior: smooth;
+        overflow: scroll;
+        border-top: 1px solid $grey-3;
+        border-bottom: 1px solid $grey-3;
+        padding: 20px 30px 20px 60px;
+        box-sizing: border-box;
+        position: relative;
+
+        img {
+            position: absolute;
+            top: 18px;
+            left: 14px;
+            height: 30px;
+            width: auto;
+        }
+    }
+
+    @media ( min-width: 1000px ) {
+        display: none;
     }
 
 }
