--- a/assets/scss/common/main.scss
+++ b/assets/scss/common/main.scss
@@ -2,7 +2,7 @@ body {
     width: 100%;
     margin: 0px;
     color: black;
-    font-family: 'libre_regular';
+    font-family: 'montserrat_regular';
     font-size: 16px;
     line-height: 27px;
     background-color: $grey-1;
@@ -10,10 +10,17 @@ body {
 
 
 main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex-start-column;
+    width: calc( 100% - 240px );
+    height: 100vh;
+    overflow: scroll;
+    margin-left: 240px;
     box-sizing: border-box;
     background-color: $grey-1;
+
+    @media ( max-width: 1000px ) {
+        width: 100%;
+        margin-left: 0px;
+        height: auto;
+    }
 }
