added logic for product categories, product filters and product query

--- a/assets/scss/frontend-style.scss
+++ b/assets/scss/frontend-style.scss
@@ -9,11 +9,13 @@
 @import 'assets/scss/common/forms';
 
 @import 'assets/scss/blocks/start';
+@import 'assets/scss/blocks/product';
 
 @import 'assets/scss/elements/containers';
 @import 'assets/scss/elements/buttons';
 @import 'assets/scss/elements/carbon-blocks';
 @import 'assets/scss/elements/product-previews';
+@import 'assets/scss/elements/page-header';
 
 @import 'assets/scss/templates/my-account';
 @import 'assets/scss/templates/login';
