--- a/assets/scss/common/colours.scss
+++ b/assets/scss/common/colours.scss
@@ -1,6 +1,7 @@
 $orange-300: #FF8A65;
 $orange-600: #F4511E;
 $orange-900: #BF360C;
+$red-1: #7A2207;
 $grey-1: #F6F6F8;
 $grey-2: #E3E3E3;
 $grey-3: #999393;
