--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -578,6 +578,139 @@ button.woocommerce-form-register__submit {
   background-color: rgba(0, 0, 0, .7);
 }
 
+.block-product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+.block-product .category-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  color: #999393;
+  background-color: #FFFFFF;
+  font-family: "montserrat_bold";
+  font-size: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  text-transform: uppercase;
+}
+.block-product .category-bar .product-category {
+  padding: 12px 35px;
+  cursor: pointer;
+}
+.block-product .category-bar .active {
+  color: black;
+  border-bottom: 2px solid black;
+}
+.block-product .products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 55px;
+     -moz-column-gap: 55px;
+          column-gap: 55px;
+  row-gap: 55px;
+  width: 100%;
+  padding: 80px 80px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.block-product .products .product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 250px;
+  cursor: pointer;
+  grid-gap: 5px;
+}
+.block-product .products .product h5 {
+  margin-top: 15px;
+}
+.block-product .products .product .image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 250px;
+  height: 312px;
+}
+.block-product .products .product .image img.landscape-img {
+  width: 250px;
+  height: 187px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.block-product .products .product .image img.portait-img {
+  width: 250px;
+  height: 312px;
+}
+.block-product .products .product .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
+}
+.block-product .products .product .price span.price-from {
+  font-size: 12px;
+}
+.block-product .products .product .price h5 {
+  font-family: "montserrat_medium";
+  font-size: 14px;
+  margin-top: 0px;
+}
+
 .flex-center-column {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -982,6 +1115,40 @@ a.select-product-button,
 }
 .photolab-product-preview h5, .photolab-product-preview p {
   margin-top: 0;
+}
+
+.page-header {
+  width: 100%;
+  padding-left: 60px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  background-color: #7A2207;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+@media (max-width: 1000px) {
+  .page-header {
+    padding-left: 20px;
+    padding-top: 0px;
+    padding-bottom: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .page-header {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+.page-header h2, .page-header p {
+  color: #FFFFFF;
+  opacity: 30%;
+}
+.page-header h2 {
+  margin-top: 40px;
+}
+.page-header p {
+  width: 100%;
+  max-width: 600px;
 }
 
 .my-account-container {
