--- a/assets/scss/common/styling.scss
+++ b/assets/scss/common/styling.scss
@@ -7,7 +7,9 @@
 }
 
 .white-line-break {
-    height: 8px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    height: 1px;
     width: 150px;
     border-bottom: thin solid white;
 }
