--- a/assets/scss/blocks/_start.scss
+++ b/assets/scss/blocks/_start.scss
@@ -1,66 +1,77 @@
 .block-start {
     width: 100%;
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-
-    @media ( max-width: 1000px ) {
-        @include flex-center-column;
-        height: auto;
-        grid-template-rows: 1fr 1fr;
-    }
+    height: auto;
 
     .top-section,
     .bottom-section {
         width: 100%;
+        height: auto;
         @include flex-start-center;
+        flex-wrap: wrap;
         text-align: center;
+        box-sizing: border-box;
+        column-gap: 3px;
+        row-gap: 3px;
 
         h5 { font-size: 14px; }
-        h3 { margin-top: 0px;  }
+        h3 { margin-top: 0px; }
+
         p {
             width: 100%;
             max-width: 600px;
             font-family: 'montserrat_medium';
         }
 
-        @media ( max-width: 1000px ) {
-            @include flex-center-column;
-        }
     }
+
 
     a.top-section-item,
     a.bottom-section-item {
-        flex: 1;
-        @include flex-end-column;
-        height: 100%;
+        @include flex-center-column;
+        min-height: 500px;
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
-        background-color: rgba( 0,0,0, 0.3 );
+        background-color: rgba( 0,0,0, 0.4 );
         background-blend-mode: overlay;
         color: $white;
         text-decoration: none;
-        padding-bottom: 80px;
         box-sizing: border-box;
         padding-left: 15px;
         padding-right: 15px;
 
-        @media ( max-width: 1000px ) {
-            width: 100%;
-            min-height: 300px;
-            @include flex-center-column;
-            padding-bottom: 40px;
-            padding-top: 25px;
+        p {
+            margin-top: 20px;
         }
+
     }
 
-    a.top-section-item { flex: 1; }
-    a.bottom-section-item { flex: 2; }
+    a.top-section-item {
+        width: calc( 50% - 3px );
+    }
+
+    a.bottom-section-item {
+        margin-top: 3px;
+        width: 100%;
+    }
 
     a.top-section-item:hover,
     a.bottom-section-item:hover {
-        background-color: rgba( 0,0,0, 0.7 );
+        background-color: rgba( 0,0,0, 0.8 );
+    }
+
+    @media ( max-width: 1000px ) {
+        a.top-section-item,
+        a.bottom-section-item {
+            width: 100%;
+        }
+    }
+
+    @media ( max-width: 600px ) {
+        a.top-section-item,
+        a.bottom-section-item {
+            min-height: 400px;
+        }
     }
 
 
