--- a/assets/scss/elements/buttons.scss
+++ b/assets/scss/elements/buttons.scss
@@ -1,5 +1,6 @@
 a.hero-button-link,
 a.more-info-button,
+.more-info-button,
 a.select-product-button,
 .paginate-button {
     max-width: 100%;
@@ -27,11 +28,12 @@ a.hero-button-link,
     padding: 10px 35px;
 }
 
-a.more-info-button {
+a.more-info-button,
+.more-info-button, {
     width: 100%;
     padding: 10px 35px;
     color: white;
-    background-color: $orange-600;
+    background-color: $orange-900;
 }
 
 a.select-product-button,
