--- a/assets/scss/frontend-style.scss
+++ b/assets/scss/frontend-style.scss
@@ -10,6 +10,7 @@
 
 @import 'assets/scss/blocks/start';
 @import 'assets/scss/blocks/product';
+@import 'assets/scss/blocks/product-filters';
 
 @import 'assets/scss/elements/containers';
 @import 'assets/scss/elements/buttons';
