worked on product filter styling and functionality

--- a/assets/scss/common/forms.scss
+++ b/assets/scss/common/forms.scss
@@ -5,7 +5,7 @@ form {
 
 label,
 .lost_password {
-    font-family: 'spartan_medium';
+    font-family: 'montserrat_medium';
     font-size: 12px;
     font-weight: 400;
     text-transform: uppercase;
