--- a/assets/scss/blocks/_product-filters.scss
+++ b/assets/scss/blocks/_product-filters.scss
@@ -1,8 +1,8 @@
 .product-filter-container {
     position: fixed;
     top: 0px;
-    right: -370px;
-    width: 370px;
+    right: -420px;
+    width: 420px;
     height: 100%;
     background-color: $white;
     transition: right 1s;
@@ -37,6 +37,7 @@
             grid-gap: 8px;
             color: $grey-3;
             cursor: pointer;
+            margin-bottom: 30px;
 
             i {
                 cursor: pointer;
@@ -55,33 +56,62 @@
         .filter-group {
             @include flex-start-start-column;
             width: 100%;
+            color: $grey-3;
 
             .trigger {
                 @include flex-space-between;
                 width: 100%;
                 border-bottom: thin solid $grey-3;
                 cursor: pointer;
+
+                label {
+                    font-family: 'montserrat_bold';
+                }
+
             }
 
             .inputs {
                 @include flex-start-center;
                 width: 100%;
-                grid-gap: 30px;
+                column-gap: 16px;
+                row-gap: 20px;
                 flex-wrap: wrap;
                 padding-top: 25px;
 
                 .input {
-                    @include flex-center-center;
-                    column-gap: 5px;
+                    position: relative;
+                    height: 35px;
+                    width: calc( 50% - 8px );
+                    z-index: 0;
+
+                    label, input {
+                        position: absolute;
+                        top: 0px;
+                        left: 0px;
+                        width: 100%;
+                        height: 100%;
+                    }
 
                     label {
-                        text-transform: none;
+                        text-align: center;
+                        vertical-align: middle;
+                        line-height: 35px;
+                        border: thin solid $grey-3;
+                        font-family: 'montserrat_bold';
+                        z-index: 1;
                     }
 
                     input {
-                        width: 20px;
-                        height: 20px;
+                        z-index: 2;
+                        opacity: 0%;
+                        cursor: pointer;
                     }
+
+                    input:checked ~ label {
+                        background-color: black;
+                        color: $white;
+                    }
+
                 }
 
             }
