--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -339,7 +339,7 @@ form {
 
 label,
 .lost_password {
-  font-family: "spartan_medium";
+  font-family: "montserrat_medium";
   font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
@@ -732,8 +732,8 @@ button.woocommerce-form-register__submit {
 .product-filter-container {
   position: fixed;
   top: 0px;
-  right: -370px;
-  width: 370px;
+  right: -420px;
+  width: 420px;
   height: 100%;
   background-color: #FFFFFF;
   -webkit-transition: right 1s;
@@ -786,6 +786,7 @@ button.woocommerce-form-register__submit {
   grid-gap: 8px;
   color: #999393;
   cursor: pointer;
+  margin-bottom: 30px;
 }
 .product-filter-container .product-filters .filters-close i {
   cursor: pointer;
@@ -812,6 +813,7 @@ button.woocommerce-form-register__submit {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
+  color: #999393;
 }
 .product-filter-container .product-filters .filter-group .trigger {
   display: -webkit-box;
@@ -827,6 +829,9 @@ button.woocommerce-form-register__submit {
   border-bottom: thin solid #999393;
   cursor: pointer;
 }
+.product-filter-container .product-filters .filter-group .trigger label {
+  font-family: "montserrat_bold";
+}
 .product-filter-container .product-filters .filter-group .inputs {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -838,31 +843,43 @@ button.woocommerce-form-register__submit {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  grid-gap: 30px;
+  -webkit-column-gap: 16px;
+     -moz-column-gap: 16px;
+          column-gap: 16px;
+  row-gap: 20px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-top: 25px;
 }
 .product-filter-container .product-filters .filter-group .inputs .input {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: 5px;
-     -moz-column-gap: 5px;
-          column-gap: 5px;
+  position: relative;
+  height: 35px;
+  width: calc(50% - 8px);
+  z-index: 0;
+}
+.product-filter-container .product-filters .filter-group .inputs .input label, .product-filter-container .product-filters .filter-group .inputs .input input {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
 }
 .product-filter-container .product-filters .filter-group .inputs .input label {
-  text-transform: none;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 35px;
+  border: thin solid #999393;
+  font-family: "montserrat_bold";
+  z-index: 1;
 }
 .product-filter-container .product-filters .filter-group .inputs .input input {
-  width: 20px;
-  height: 20px;
+  z-index: 2;
+  opacity: 0%;
+  cursor: pointer;
+}
+.product-filter-container .product-filters .filter-group .inputs .input input:checked ~ label {
+  background-color: black;
+  color: #FFFFFF;
 }
 .product-filter-container .product-filters .filter-group .hidden {
   display: none;
