--- a/assets/scss/blocks/_product.scss
+++ b/assets/scss/blocks/_product.scss
@@ -21,6 +21,7 @@
             .product-category {
                 padding: 12px 35px;
                 cursor: pointer;
+                border-bottom: 2px solid $white;
             }
 
             .active {
